# mlops-deploy-de-modelos

./: Makefile  README.md  pyproject.toml
src/app/: main.py
